# PAG-Practica3

./: CMakeLists.txt  Listener.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  camara.cpp  camara.h  conandata.yml  main.cpp
Shaders/: pag03-fs.glsl  pag03-vs.glsl
glad/include/glad/: glad.h
glad/src/: glad.c
